[project]
name = "metawahl-api"
version = "2.0.0"
description = "Metawahl API backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-SQLAlchemy>=3.1,<4.0",
    "Flask-Caching>=2.3,<3.0",
    "Flask-Cors>=5.0,<7.0",
    "SQLAlchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "redis>=5.0,<7.0",
    "lxml>=6.1.0,<7.0",
    "python-dateutil>=2.9",
    "python-slugify>=8.0",
    "requests>=2.32",
    "Wikidata>=0.8",
    "itsdangerous>=2.2",
    "Werkzeug>=3.0,<4.0",
    "Jinja2>=3.1",
    "MarkupSafe>=2.1",
    "prettyprint>=0.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "alembic>=1.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"**/__init__.py" = ["F401", "F403", "E402"]
"app/services/logger/helper.py" = ["UP031", "UP036"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["app/services/logger/helper.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]
